force-app/main/default/objects/TwilioConfig__c/fields/AccountSid__c.field-meta.xml
<CustomField>
    <fullName>AccountSid__c</fullName>
    <defaultValue>&quot;AC5918a75449702dbcb107abd5f07fe787&quot;</defaultValue>
    <label>AccountSid</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>