force-app/main/default/objects/TwilioConfig__c/fields/AuthToken__c.field-meta.xml
<CustomField>
    <fullName>AuthToken__c</fullName>
    <defaultValue>&quot;d57f756b642041569e0dceb1253148eb&quot;</defaultValue>
    <label>AuthToken</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>