force-app/main/default/objects/TwilioConfig__c/fields/CallerId__c.field-meta.xml
<CustomField>
    <fullName>CallerId__c</fullName>
    <defaultValue>TEXT (3148588965)</defaultValue>
    <label>CallerId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>